--- a/petshop-frontend/package.json
+++ b/petshop-frontend/package.json
@@ -21,6 +21,10 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
+    "css-loader": "^0.24.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "style-loader": "^0.13.1",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
