--- a/petshop-frontend/package.json
+++ b/petshop-frontend/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.15.0",
+    "normalize.css": "^4.2.0",
+    "less": "^2.7.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "whatwg-fetch": "^1.0.0"
@@ -22,10 +24,11 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.24.0",
-    "less": "^2.7.1",
+    "file-loader": "^0.9.0",
     "less-loader": "^2.2.3",
-    "style-loader": "^0.13.1",
     "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
   }
